--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.4.7",
     "react-router-dom": "^7.1.1",
     "sass": "^1.83.4",
     "styled-components": "^6.1.14",
